fix(segmented control): segmneted conrol scroll when overflow.

--- a/packages/assets/css/src/scss/_components/_segmented-control/_elements/_build-segmented-control.scss
+++ b/packages/assets/css/src/scss/_components/_segmented-control/_elements/_build-segmented-control.scss
@@ -13,8 +13,10 @@
 	// THEME: None.
 	@include sui-class($rtl: false, $theme: null) {
 		@include block($block) {
-			align-items: stretch;
 			display: flex;
+			align-items: stretch;
+			overflow-y: scroll;
+			padding: $spacing-2xs;
 		}
 	}
 }
